v.1.4.4

- repair station now works like the modify station, button click!
- add new datapack stat: "one applies to other". Used with my stat that adds spell damage based on heal power.
Yes that means you can do stuff like "20% of strength applies to intelligence" 
- dont sync mob stats to client. They seem to be unneded. This should improve performance. (the only thing that needs to be synced are mob affixes and statuses)
- fix status effects not showing particles
- turn off gem glint
- fix auto helmet compat

v 1.4.3
- fix recipes (they were excluded for some reason?)

v.1.4.2
- added new datapack feature: adding "enabled": false, to base of the json will make it so that json isn't registered. 
- updated chinese lang

v.1.4.1
- fix helmet boots

v.1.4.0

Added a "few" new unique gears:
- Snake eye
- Judgement
- Smell of Rot
- The Unfading
- Fifth Rider
- Harbinger
- Gluttony
- Crown of Ice
- Crown of Elements
- Origin of Arcane
- Gem of the North
- Worldbearer
- Solaris
- Lunaris
- Touch of Eternity
- Kingmaker
- Eternal Hunger

New runes:
- YUN

New runewords:
- Momentum
- Sentinel

Added new stats:
- dmg at day
- dmg at night
- dmg under hunger/poison/wither

- added gem and rune loot crates.

Reworks:
- further tried to optimize login packets. this time caching the packetbytebuf so it should save at least 0.1 sec per login.
- perks and spell mods now use efficient packets
- reworked inner code. Might be buggy. Goal: separate my data generation code from actual in game code. Data gen code should never run outside of my dev environment.
As a result some ring and necklaces changed ids
- added datapack effects! You can use similar format to spells and make effects do custom things, or just make them purely give stats, even vanilla ones!
- sync all packets at login again. (there was a problem, spells didnt work until you opened menu, woops)

Reworked my rarities into registries like all my other datapacks, as a result: