@@ -1,0 +1,3 @@
+{
+  "type": "mmorpg:repair_with_kit"
+}
